<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


  <item
      android:id="@+id/dashboard"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/drawer_dashboard"/>
  <item
      android:id="@+id/profile"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/drawer_profile"/>
  <item
      android:id="@+id/survey"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/drawer_surveys"/>
  <item
      android:id="@+id/development_plans"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/drawer_development_plans"/>
  <item
      android:id="@+id/settings"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/drawer_settings"/>
  <item
      android:id="@+id/logout"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/drawer_logout"/>
</menu>
