<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_login_gradient">

  <LinearLayout
      android:id="@+id/layout_body"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_login">

      <ImageView
          android:id="@+id/image_profile"
          android:layout_width="48dp"
          android:layout_height="match_parent"
          android:layout_alignParentRight="true"
          android:padding="10dp"
          android:src="@drawable/profile"/>

      <EditText
          android:id="@+id/edit_username"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_toLeftOf="@id/image_profile"
          android:background="@null"
          android:hint="@string/username"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress"
          android:paddingEnd="4dp"
          android:paddingLeft="4dp"
          android:paddingStart="4dp"
          android:textColor="@color/common_text_color"
          android:textColorHint="@color/inactive_color"
          android:textSize="20sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_username_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/username_required"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_rounded_login">

      <ImageView
          android:id="@+id/image_lock"
          android:layout_width="48dp"
          android:layout_height="match_parent"
          android:layout_alignParentRight="true"
          android:padding="10dp"
          android:src="@drawable/lock"/>

      <EditText
          android:id="@+id/edit_password"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_toLeftOf="@id/image_lock"
          android:background="@null"
          android:hint="@string/password"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:paddingEnd="4dp"
          android:paddingLeft="4dp"
          android:paddingStart="4dp"
          android:textColor="@color/common_text_color"
          android:textColorHint="@color/inactive_color"
          android:textSize="20sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/password_required"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        style="@style/orange_button"
        android:onClick="login"
        android:text="@string/login"/>
  </LinearLayout>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@id/layout_body"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="54dp"
      android:src="@drawable/logo"/>

  <TextView
      android:id="@+id/text_contact_us"
      fontPath="fonts/Lato-Italic.ttf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="32dp"
      android:gravity="center"
      android:onClick="contactUs"
      android:text="@string/contact_us"
      android:textColor="@color/white"
      android:textStyle="bold"
      tools:ignore="MissingPrefix"/>

  <TextView
      fontPath="fonts/Lato-Italic.ttf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@id/text_contact_us"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:onClick="forgotPassword"
      android:text="@string/forgot_password"
      android:textColor="@color/white"
      tools:ignore="MissingPrefix"/>
</RelativeLayout>