<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_invite_people">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"
      android:src="@drawable/bg"/>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/invite_people_to_rate_you"
          android:textColor="@color/white"
          android:textSize="18sp"/>

      <TextView
          android:id="@+id/text_evaluated"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/invite_people_to_rate_you"
          android:textColor="@color/white"
          android:textSize="13sp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:text="@string/name"
          android:textColor="@color/white"/>

      <EditText
          android:id="@+id/edit_name"
          style="@style/edit_text"
          android:layout_width="match_parent"
          android:layout_marginTop="4dp"
          android:imeOptions="actionNext"
          android:inputType="textPersonName"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/email"
          android:textColor="@color/white"/>

      <EditText
          android:id="@+id/edit_email"
          style="@style/edit_text"
          android:layout_width="match_parent"
          android:layout_marginTop="4dp"
          android:imeOptions="actionDone"
          android:inputType="textEmailAddress"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/role"
          android:textColor="@color/white"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="4dp">

        <ImageView
            android:id="@+id/layout_right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_rounded_input_field"
            android:src="@drawable/ic_arrow_down"
            android:tint="@color/colorPrimaryDark">
        </ImageView>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/layout_right"
            android:background="@drawable/bg_rounded_input_field"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"/>
      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/text_add"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_rounded_input_field"
            android:gravity="center"
            android:onClick="addUser"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/add"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/users_to_invite"
            android:textColor="@color/white"
            android:textSize="18sp"/>
      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:minHeight="100dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/text_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/no_users"
            android:textColor="@color/white"/>
      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="70dp"/>
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>


  <TextView
      style="@style/orange_button"
      android:layout_width="match_parent"
      android:layout_alignParentBottom="true"
      android:layout_margin="16dp"
      android:onClick="sendInvites"
      android:text="@string/send_invites"/>
</RelativeLayout>