<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/activity_invite">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"
      android:src="@drawable/bg"/>

  <TextView
      android:id="@+id/text_invite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:onClick="invite"
      android:padding="12dp"
      android:text="@string/invite_by_email"
      android:textColor="@color/orange_button"/>

  <TextView
      android:id="@+id/text_button_bottom"
      style="@style/orange_button"
      android:layout_width="match_parent"
      android:layout_above="@id/text_invite"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="8dp"
      android:onClick="create"
      android:text="@string/send_invites"/>

  <LinearLayout
      android:id="@+id/layout_searchview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimaryDark"
      android:orientation="vertical">

    <android.support.v7.widget.SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bg_rounded_input_field"
        app:defaultQueryHint="@string/search">
    </android.support.v7.widget.SearchView>
  </LinearLayout>

  <RelativeLayout
      android:id="@+id/layout_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/layout_searchview"
      android:padding="8dp">

    <TextView
        android:id="@+id/text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_people_selected"
        android:textColor="@color/white"
        android:textSize="11sp"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"/>
  </RelativeLayout>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/list_users"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@id/text_button_bottom"
      android:layout_below="@id/layout_header"
      android:layout_marginTop="4dp"
      android:clickable="true"
      android:focusableInTouchMode="true"/>
</RelativeLayout>